--- a/templates/rate.html
+++ b/templates/rate.html
@@ -184,7 +184,7 @@
                         let nation = movies['production_countries'][0]['name'];
 
                         give_movie_detail(movieid,title,genre,overview,nation);
-
+                        countGenre(genre);
                     }
                 })
             }
@@ -195,13 +195,54 @@
                 data: {movieid_give: movieid, title_give: title, genre_give: genre, overview_give:overview, nation_give:nation},
                 success: function (response) {
                     if (response["result"] == "success") {
-                        alert(response["msg"]);
                         window.location.reload();
                     }
                 }
             });
         }
 
+        {#function getGenreName() {#}
+        {#        $.ajax({#}
+        {#            type:"GET",#}
+        {#            url: "https://api.themoviedb.org/3/genre/movie/list?",#}
+        {#            data: {'api_key':'a338932a06b8f07fb4c5638b91007531','language':'ko-KR'},#}
+        {#            success: function (response) {#}
+        {#                let genres = response["genres"];#}
+        {#                let gernesLength = genres.length;#}
+        {#                console.log(genres)#}
+        {#                for (let index = 0; index < gernesLength; index++){#}
+        {#                    let genre = genres[index]['name'];#}
+        {#                    save_genre(genre);#}
+        {#                }#}
+        {#            }#}
+        {#        })#}
+        {#    }#}
+        {#    function save_genre(genre) {#}
+        {#    $.ajax({#}
+        {#        type: "POST",#}
+        {#        url: "/myGenre",#}
+        {#        data: {'genre_give':genre},#}
+        {#        success: function (response) {#}
+        {#            if (response["result"] == "success") {#}
+        {#                alert(response["msg"]);#}
+        {#                window.location.reload();#}
+        {#            }#}
+        {#        }#}
+        {#    });#}
+
+        function countGenre(genre){
+            $.ajax({
+                type: "POST",
+                url: "/countGenre",
+                data: {genre_give: genre},
+                success: function (response) {
+                    if (response["result"] == "success") {
+                        alert(response["msg"]);
+                        window.location.reload();
+                    }
+                }
+            });
+        }
 
     </script>
 
