--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -32,7 +32,7 @@
                 console.log(userID)
 
                 if (!validateEmail(userID)) {
-                    alert('아이디를 입력해주세요')
+                    alert('아이디를 이메일 형식으로 입력해주세요')
                     $('#userID').focus()
                     return
                 } else if (password == '') {
