--- a/templates/genre.html
+++ b/templates/genre.html
@@ -60,6 +60,11 @@
         .background{
             background-color: black;
         }
+        .card-size{
+            margin: 10px;
+            width: 200px;
+            height: auto;
+        }
 
     </style>
 
@@ -144,7 +149,7 @@
                         let poster_url = "https://image.tmdb.org/t/p/w300/"
                         let base_url = "https://www.themoviedb.org/movie/"
 
-                        let movieCard = `<div class="card">
+                        let movieCard = `<div class="card card-size">
                                                         <img class="card-img-top" src="${poster_url}${poster_path}" alt="Card image cap">
                                                         <div class="card-body text-center">
                                                         <a href="${base_url}${id}" target="_blank" class="link-font">${title}</a>
@@ -280,7 +285,7 @@
 {#        <a class="dropdown-item" href="#" value="GB">영국</a>#}
 {#      </div>#}
 {#    </div>#}
-    <div class="card-columns" id="cards-box" style="margin-top: 15px">
+    <div class="row mb-5" id="cards-box" style="margin-top: 15px">
 
     </div>
 </div>
