--- a/templates/genre.html
+++ b/templates/genre.html
@@ -150,8 +150,7 @@
             function Select(selectgenre, selectnation) {
                 $('#cards-box').empty()
                 let movie_page;
-                for (movie_page = 1; movie_page < 3; movie_page++) {
-                    $.ajax({
+                $.ajax({
                         type: 'GET',
                         url: 'https://api.themoviedb.org/3/discover/movie?',
                         data: {
@@ -159,7 +158,7 @@
                             'language': 'ko-KR',
                             'sort_by': 'vote_count.desc',
                             'include_video': 'false',
-                            'page': movie_page,
+                            'page': 1,
                             'with_genres': selectgenre,
                             'with_original_language': selectnation
                         },
@@ -208,7 +207,6 @@
                         }
                     });
                 }
-            }
 
     </script>
 </head>
