--- a/templates/main.html
+++ b/templates/main.html
@@ -83,16 +83,20 @@
             font-family: 'Do Hyeon', sans-serif;
             color: white;
         }
-
     </style>
-
     <script>
         $(document).ready(function () {
-            // 창을 새로고침할 때마다 실행할 함수를 여기에 입력합니다.
             showImage();
             showMovieRank();
-            currentRunningMovie();
+            popularMovie();
         });
+        function on() {
+          document.getElementById("overlay").style.display = "block";
+        }
+
+        function off() {
+          document.getElementById("overlay").style.display = "none";
+        }
         function onClickBtnLogOut() {
             $.ajax({
                 url: '/logout',
@@ -136,8 +140,6 @@
                             let base_url = "https://www.themoviedb.org/movie/"
                             let overview = movies[index]['overview']
 
-
-
                             let image = `<img src="${poster_url}${backdrop_path}" class="d-block w-100" alt="...">
                                             <div class="carousel-caption">
                                                  <a href="${base_url}${id}" class="carousel-font">${title}</a>
@@ -152,7 +154,6 @@
                             let poster_url = "https://image.tmdb.org/t/p/w1280/"
                             let base_url = "https://www.themoviedb.org/movie/"
                             let overview = movies[index]['overview']
-
 
                             let image = `<img src="${poster_url}${backdrop_path}" class="d-block w-100" alt="...">
                                             <div class="carousel-caption">
@@ -169,7 +170,6 @@
                             let base_url = "https://www.themoviedb.org/movie/"
                             let overview = movies[index]['overview']
 
-
                             let image = `<img src="${poster_url}${backdrop_path}" class="d-block w-100" alt="...">
                                             <div class="carousel-caption">
                                                  <a href="${base_url}${id}" class="carousel-font">${title}</a>
@@ -180,11 +180,10 @@
                     }
                 });
             }
-
             function showMovieRank() {
                 $.ajax({
                     type: 'GET',
-                    url: 'https://api.themoviedb.org/3/movie/popular?',
+                    url: 'https://api.themoviedb.org/3/trending/movie/day?',
                     data: {"api_key": "a338932a06b8f07fb4c5638b91007531", 'language':'ko-KR', 'page':1},
                     success: function (response) {
                         console.log(response)
@@ -208,14 +207,13 @@
                     }
                 });
             }
-
-            function currentRunningMovie() {
+            function popularMovie() {
                 $.ajax({
                     type: 'GET',
-                    url: 'https://api.themoviedb.org/3/movie/now_playing?',
-                    data: {"api_key": "a338932a06b8f07fb4c5638b91007531", 'language':'ko-KR', 'page':1},
+                    url: 'https://api.themoviedb.org/3/discover/movie?',
+                    data: {'api_key': 'a338932a06b8f07fb4c5638b91007531', 'language': 'ko-KR', 'sort_by': 'vote_count.desc'},
                     success: function (response) {
-                        console.log(response)
+                        //console.log(response)
                         //if (response['result'] == 'success') {
                         //let movies = response['msg'];
                         let movies = response["results"]
@@ -225,18 +223,19 @@
                             let id = movies[index]['id'];
                             let title = movies[index]['title'];
                             let popularity = movies[index]['popularity'];
-                            let vote_count = movies[index]['vote_count'];
+                            let vote_average = movies[index]['vote_average'];
                             let release_date = movies[index]['release_date']
                             let poster_path = movies[index]['poster_path']
                             let poster_url = "https://image.tmdb.org/t/p/w1280/"
                             let base_url = "https://www.themoviedb.org/movie/"
 
-                            getCurrentVideo(id,title, popularity, vote_count, release_date, poster_path, poster_url, base_url)
+                            GetPopularVideo(id,title, popularity, vote_average, release_date, poster_path, poster_url, base_url)
                         }
                     }
                 });
             }
-        function getRankVideo(id,title, popularity, vote_count, release_date, poster_path, poster_url, base_url) {
+        function getRankVideo(id,title, popularity, vote_average, release_date, poster_path, poster_url, base_url) {
+            //console.log(id)
             $.ajax({
                     type: 'GET',
                     url: 'https://api.themoviedb.org/3/movie/'+id+'/videos?',
@@ -273,8 +272,8 @@
                                                             <span>${popularity}</span>
                                                         </div>
                                                         <div class="info-section">
-                                                            <label>vote_count</label>
-                                                            <span>${vote_count}</span>
+                                                            <label>vote_average</label>
+                                                            <span>${vote_average}</span>
                                                         </div>
                                                     </div>
                                                 </div>`;
@@ -282,7 +281,7 @@
                     }
                 });
             }
-            function getCurrentVideo(id,title, popularity, vote_count, release_date, poster_path, poster_url, base_url) {
+            function GetPopularVideo(id,title, popularity, vote_average, release_date, poster_path, poster_url, base_url) {
             $.ajax({
                     type: 'GET',
                     url: 'https://api.themoviedb.org/3/movie/'+id+'/videos?',
@@ -319,8 +318,8 @@
                                                             <span>${popularity}</span>
                                                         </div>
                                                         <div class="info-section">
-                                                            <label>vote_count</label>
-                                                            <span>${vote_count}</span>
+                                                            <label>vote_average</label>
+                                                            <span>${vote_average}</span>
                                                         </div>
                                                     </div>
                                                 </div>`;
@@ -328,7 +327,6 @@
                     }
                 });
             }
-
         {#    Date.prototype.yyyymmdd = function() {#}
         {#        var yyyy = this.getFullYear().toString();#}
         {#        var mm = (this.getMonth() + 1).toString();#}
@@ -338,7 +336,6 @@
         {##}
         {#        let yesterday = (new Date()).yyyymmdd()-1;#}
         {#        console.log(yesterday);#}
-
 
     </script>
 </head>
@@ -404,21 +401,17 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-    <div><span class="badge badge-danger ranking-font" style="border-radius: 20px"> Popular Movies </span></div>
+    <div><span class="badge badge-danger ranking-font" style="border-radius: 20px; padding: 5px 20px 10px 20px">Today's Trending</span></div>
     <div>
         <div id="movie-rank">
 
         </div>
     </div>
-    <div><span class="badge badge-danger ranking-font" style="border-radius: 20px"> Now Playing Movies </span></div>
+    <div><span class="badge badge-danger ranking-font" style="border-radius: 20px; padding: 5px 20px 10px 20px">Movies with many ratings</span></div>
     <div>
         <div id="current-movie">
 
         </div>
     </div>
-
-
-
-
 </body>
 </html>
