--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -66,7 +66,7 @@
         }
 
         .wrap {
-            width: 1300px;
+            width: 1100px;
             margin: auto;
             margin-top: 50px;
         }
@@ -98,6 +98,7 @@
             countGenre();
             countRate();
             countNation();
+            countYear();
             recommendMovie();
         });
 
@@ -140,7 +141,7 @@
                 success: function (response) {
                     predict = response['predict_list']
                     predictLength = predict.length;
-                    console.log(response)
+                    //console.log(response)
 
                     for (let index = 0; index < predictLength; index++){
                         tmdbid = predict[index][0];
@@ -170,7 +171,7 @@
                         let poster_url = "https://image.tmdb.org/t/p/w300/"
                         let base_url = "https://www.themoviedb.org/movie/"
 
-                        console.log(title)
+                        //console.log(title)
                         let predict_list = `<tr>
                                               <th scope="row">${index}</th>
                                               <td>${title}</td>
@@ -226,29 +227,29 @@
             <p class="lead"><font class="jumbo-font">이용해 주셔서 감사합니다🐹</font></p>
         </div>
     <div class="row">
-        <div class="row my-2 col-md-8">
+        <div class="row my-2 col-md-12">
             <div class="col-lg-6">
-                <div class="card">
+                <div class="card" style="margin-bottom: 10px">
                     <div class="card-body">
                         <canvas id="myChart1"></canvas>
                     </div>
-                    <div class="card-footer text-center bg-dark text-light">
+                    <div class="card card-footer text-center bg-dark text-light">
                         <h3>영화 선호장르</h3>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="card">
+                <div class="card" style="margin-bottom: 10px">
                     <div class="card-body">
                         <canvas id="myChart2"></canvas>
                     </div>
-                    <div class="card card-body text-center bg-dark text-light">
+                    <div class="card card-footer text-center bg-dark text-light">
                         <h3>별점 분포</h3>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="card">
+                <div class="card" style="margin-bottom: 10px">
                     <div class="card-body">
                         <canvas id="myChart3"></canvas>
                     </div>
@@ -257,9 +258,19 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-6">
+                <div class="card" style="margin-bottom: 10px">
+                    <div class="card-body">
+                        <canvas id="myChart4"></canvas>
+                    </div>
+                    <div class="card card-body text-center bg-dark text-light">
+                        <h3>영화 선호 년도</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-        <table class="table table-dark list-wrap">
+        <table class="table table-dark list-wrap" style="border-radius: 10px">
           <thead>
             <tr>
               <th scope="col">rank</th>
@@ -427,6 +438,59 @@
                         type: 'doughnut',
                         data: data,
                         options: donutOptions
+                    });
+                }
+            });
+        }
+        function countYear() {
+            $.ajax({
+                type: "GET",
+                url: "/countYear",
+                data: {},
+                success: function (response) {
+                    let result = response['year_list'];
+                    //console.log(result)
+                    key = Object.keys(result);
+                    value = Object.values(result);
+
+                    let resultLength = key.length;
+                    let yearScoreArray = [];
+                    let yearCountArray = [];
+
+                    for (let index = 0; index < resultLength; index++) {
+                        let yearScore = key[index];
+                        let yearCount = value[index];
+                        yearScoreArray.push(yearScore);
+                        yearCountArray.push(yearCount);
+                    }
+
+                    var ctx4 = document.getElementById('myChart4');
+                    var myChart4 = new Chart(ctx4, {
+                        type: 'bar',
+                        data: {
+                            labels: yearScoreArray,
+                            datasets: [{
+                                label: 'Bar Dataset',
+                                data : yearCountArray,
+                                backgroundColor: 'rgba(256, 0, 0, 0.1)'
+                            },
+                                {
+                                    label: 'Line Dataset',
+                                    data: yearCountArray,
+                                    backgroundColor: 'transparent',
+                                    borderColor: 'skyblue',
+                                    type: 'line'
+                                }]
+                        },
+                        options: {
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                    }
+                                }]
+                            }
+                        }
                     });
                 }
             });
